# ros2-ur10-application

./: README.md
cad/: Base.SLDPRT  Bracket.SLDPRT  Link1.SLDPRT  Link2.SLDPRT
src/robot1/: CMakeLists.txt  package.xml
src/robot1/config/: control.yaml
src/robot1/launch/: gazebo.launch.py  spawn_robot_ros2.launch.py
src/robot1/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/robot1/scripts/: arm_pick.py  arm_place.py  teleop.py
src/robot1/urdf/: robot1.csv  robot1.urdf.xacro
